logs/hbi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hbi'...
Compiling './lib/python3.5/site-packages/hbi/__main__.py'...
***   File "./lib/python3.5/site-packages/hbi/__main__.py", line 82
    logger.info(f'Starting HBI server with module {hbie.modu_name} on {hbie.host or "*"}:{hbie.port}')
                                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hbi/conn.py'...
***   File "./lib/python3.5/site-packages/hbi/conn.py", line 124
    return f'HBI:{self.net_info}'
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hbi/log.py'...
***   File "./lib/python3.5/site-packages/hbi/log.py", line 22
    hbi_root_logger.error(f'HBI failed setting log level to [{log_level_name}]')
                                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hbi/sockconn.py'...
***   File "./lib/python3.5/site-packages/hbi/sockconn.py", line 132
    return f"[{transport.get_extra_info('sockname')} <=> {transport.get_extra_info('peername')}]"
                                                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hbi-1.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
